Fix mobile navigation not showing on some devices

--- a/source/theme/styles/components/_main-navigation.scss
+++ b/source/theme/styles/components/_main-navigation.scss
@@ -177,7 +177,7 @@
     display: none;
   }
 
-  .mobile-product-navigation.dk-select {
+  .mobile-product-navigation.link-dropdown {
     display: block;
   }
 }
